# Log_Sensitivity_Analyzer

./: .env.example  .gitignore  CONTRIBUTING.md  DASHBOARD.md  LICENSE  README.MD  SECURITY.md  project_info.json  pyproject.toml  run_tests.sh  setup.sh
.github/workflows/: ci.yml
docs/: VİDEO.md
researchs/chatgpt/: research.chatgpt.chat_link.txt  research.chatgpt.prompt.md  research.chatgpt.result.md  research.chatgpt.sources.md
researchs/claude/: research.claude.chat_link.txt  research.claude.prompt.md  research.claude.result.md  research.claude.sources.md
researchs/gemini-fast/: research.gemini-fast.chat_link.txt  research.gemini-fast.prompt.md  research.gemini-fast.result.md  research.gemini-fast.sources.md
researchs/gemini-pro/: research.gemini-pro.chat_link.txt  research.gemini-pro.prompt.md  research.gemini-pro.result.md  research.gemini-pro.sources.md
researchs/perplexity/: research.perplexity.chat_link.txt  research.perplexity.prompt.md  research.perplexity.result.md  research.perplexity.sources.md
specs/: project_info.json
src/: __init__.py
src/core/: __init__.py  automation.py  engine.py  patterns.py
src/ui/: __init__.py  app.py
src/validators/: __init__.py  luhn_validator.py  tckn_validator.py  test_validators.py
tests/: canary_logs.json  test_full_pipeline.py
