[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log-sensitivity-analyzer"
version = "1.0.0"
description = "Forensic-grade DLP tool for detecting PII and secrets in log files"
readme = "README.MD"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
  { name = "Senior Security Engineering Team" }
]
dependencies = [
  "streamlit>=1.28.0",
  "pandas>=2.0.0",
  "plotly>=5.17.0"
]

[project.scripts]
lsa = "core.engine:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
